[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/items/coin/1.png" type="Texture" id=1]
[ext_resource path="res://assets/items/coin/2.png" type="Texture" id=2]
[ext_resource path="res://assets/items/coin/3.png" type="Texture" id=3]
[ext_resource path="res://assets/items/coin/0.png" type="Texture" id=4]
[ext_resource path="res://scripts/items/coin.gd" type="Script" id=5]
[ext_resource path="res://sfx/coin/collect_coin.mp3" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 3.16228

[node name="Coin" type="Area2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="CoinCollected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
[connection signal="finished" from="CoinCollected" to="." method="_on_CoinCollected_finished"]
